# RayTracing

./: .gitignore  CMakeLists.txt  README.md  render.sh
.history/: .gitignore_20241128164532  .gitignore_20241128164535  .gitignore_20241128164541  .gitignore_20241128164542  CMakeLists_20241204170732.txt  render_20241204162403.sh  render_20241210164634.sh  render_20241210164640.sh  render_20241210164926.sh  render_20241210174245.sh  render_20241210174511.sh  render_20241210175018.sh  render_20241210180047.sh  render_20241210201119.sh  render_20241210201124.sh
.history/GPU/: camera_20241127010643.h  camera_20241128164516.h
.history/src/cuda/: aabb_20241210195738.h  aabb_20241210195843.h  aabb_20241210195905.h  aabb_20241210200333.h  bvh_20241204162236.h  bvh_20241209151916.h  bvh_20241210133551.h  bvh_20241210133558.h  bvh_20241210133601.h  bvh_20241210133621.h  bvh_20241210133641.h  bvh_20241210133647.h  bvh_20241210134237.h  bvh_20241210135526.h  bvh_20241210135825.h  bvh_20241210140301.h  bvh_20241210140321.h  bvh_20241210140334.h  bvh_20241210140351.h  bvh_20241210140357.h  bvh_20241210140408.h  bvh_20241210140632.h  bvh_20241210140646.h  bvh_20241210140806.h  bvh_20241210140850.h  bvh_20241210193845.h  bvh_20241210195415.h  bvh_20241210195418.h  bvh_20241210195420.h  bvh_20241210195423.h  bvh_20241210195623.h  bvh_20241210195638.h  bvh_20241210195644.h  bvh_20241210200010.h  bvh_20241210200022.h  bvh_20241210200023.h  camera_20241210134049.h  camera_20241210134100.h  camera_20241210134113.h  camera_20241210134729.h  (+76 more)
GPU/: aabb.h  bvh.h  camera.h  hittable.h  interval.h  main.cu  material.h  sphere.h
images/: cornell_box.ppm  cornell_smoke.ppm  final_scene.ppm  first_scene.ppm  image.ppm  mesh_scene.ppm  test.ppm  test_cuda.ppm
images/animation/: image0.ppm  image1.ppm  image10.ppm  image11.ppm  image12.ppm  image13.ppm  image14.ppm  image15.ppm  image16.ppm  image17.ppm  image18.ppm  image19.ppm  image2.ppm  image20.ppm  image21.ppm  image22.ppm  image23.ppm  image24.ppm  image25.ppm  image26.ppm  image27.ppm  image28.ppm  image29.ppm  image3.ppm  image30.ppm  image31.ppm  image32.ppm  image33.ppm  image34.ppm  image35.ppm  image36.ppm  image37.ppm  image38.ppm  image39.ppm  image4.ppm  image40.ppm  image41.ppm  image42.ppm  image43.ppm  image44.ppm  (+22 more)
src/: camera.h  main.cc  stb_image_utils.h  texture.h  utils.h
src/CPU/: CMakeLists.txt  camera.h  color.h  hittable.h  interval.h  main.cc  material.h  ray.h  sphere.h  vec.h
src/GPU/: CMakeLists.txt  bvh.cuh  camera.h  color.h  constant_medium.h  hittable.h  main.cu  material.h  pdf.h  perlin.h  quad.h  ray.h  render.sh  sphere.h  texture.h  vec.h
src/cpu/: aabb.h  bvh.h  camera.h  cpuRenderer.cpp  hittable.h  hittable_list.h  onb.h  sphere.h  stb_image_utils.h  triangle.h  utils.h
src/cuda/: .clang-format  aabb.cuh  bvh.cuh  bvh.h  camera.cuh  camera.h  color.cuh  color.h  constant_medium.cuh  constant_medium.h  cudaRenderer.cu  hittable.cuh  hittable.h  hittable_list.cuh  interval.cuh  material.cuh  material.h  onb.cuh  onb.h  pdf.cuh  pdf.h  perlin.cuh  perlin.h  quad.cuh  ray.cuh  sphere.cuh  sphere.h  texture.cuh  texture.h  triangle.h  utils.cuh  vec.h  vec3.cuh
